@@ -63,6 +63,8 @@
 typedef struct ttype_s {
 	char	*name;
 	time_t	etime;
+	char	**upsnames;		/* List of unique UPSNAME values that commanded to start this timer name */
+	char	**notifytypes;	/* List of unique NOTIFYTYPE values that commanded to start this timer name */
 	struct ttype_s	*next;
 } ttype_t;
 
@@ -120,6 +122,119 @@ static void exec_cmd(const char *cmd)
 	return;
 }
 
+/* Collect the list of strings into a "sep" (e.g. comma) separated string.
+ * If the return value is not NULL, caller should free() this.
+ * TODO: Generalize and move to common as some snprintfcatext()?
+ */
+static char* collect_string(char **string_arr, char *logtag, char *sep, size_t *pBufsize, size_t *pCount)
+{
+	size_t	bufsize = SMALLBUF, prevlen = 0, count = 0;
+	char	*buf = NULL, **ptr, *s;
+	int	ret_printf;
+
+	/* Do we have at least one non-trivial string there? */
+	if (!string_arr || !(*string_arr) || !(**string_arr))
+		return NULL;
+
+	buf = xcalloc(bufsize, sizeof(char));
+	if (!buf) {
+		upsdebugx(1, "%s: failed to allocate buffer, will not report any %s values", __func__, logtag);
+		return NULL;
+	}
+
+	for (ptr = string_arr; ptr != NULL; ptr++) {
+		int	retry = 0;
+
+		s = *ptr;
+
+		if (*s == '\0')
+			continue;
+
+		do {
+			ret_printf = snprintf(
+				buf + prevlen,
+				bufsize - prevlen - 1,
+				"%s%s",
+				count ? (sep ? sep : ",") : "",
+				s);
+			buf[bufsize - 1] = '\0';
+
+			if (ret_printf < 0) {
+				upsdebugx(1, "%s: error collecting names, might not report all %s values", __func__, logtag);
+				buf[prevlen] = '\0';
+			} else if ((size_t)ret_printf + prevlen >= bufsize) {
+				if (bufsize < SIZE_MAX - LARGEBUF) {
+					bufsize += LARGEBUF;
+					upsdebugx(1, "%s: buffer overflowed, trying to re-allocate as %" PRIuSIZE, __func__, bufsize);
+					buf = realloc(buf, bufsize);
+
+					if (!buf) {
+						upsdebugx(1, "%s: buffer overflowed and failed to re-allocate, will not report any %s values", __func__, logtag);
+					} else {
+						upsdebugx(5, "%s: buffer overflowed, but re-allocated successfully - retrying", __func__);
+						/* Retry this loop */
+						retry = 1;
+					}
+				} else {
+					upsdebugx(1, "%s: buffer overflowed, might not report all %s values", __func__, logtag);
+					buf[prevlen] = '\0';
+				}
+			} else {
+				prevlen += (size_t)ret_printf;
+			}
+		} while (!retry);
+
+		count++;
+	}
+
+	if (pBufsize)
+		*pBufsize = bufsize;
+
+	if (pCount)
+		*pCount = count;
+
+	return buf;
+}
+
+static void exec_cmd_timer(ttype_t *item)
+{
+	char	*upsnames = NULL, *notifytypes = NULL;
+	size_t	upsnames_count = 0, notifytypes_count = 0;
+
+	if (!item || !item->name || !(*(item->name))) {
+		upsdebugx(1, "%s: SKIP bad call with null arg or its command name", __func__);
+		return;
+	}
+
+	/* Do we have at least one non-trivial string there? */
+	if (item->upsnames && *(item->upsnames) && **(item->upsnames)) {
+		upsnames = collect_string(item->upsnames, "UPSNAME", ",", NULL, &upsnames_count);
+	}
+
+	if (item->notifytypes && *(item->notifytypes) && **(item->notifytypes)) {
+		notifytypes = collect_string(item->notifytypes, "NOTIFYTYPE", ",", NULL, &notifytypes_count);
+	}
+
+	if (upsnames)
+		setenv("UPSNAME", upsnames, 1);
+
+	if (notifytypes)
+		setenv("NOTIFYTYPE", notifytypes, 1);
+
+	exec_cmd(item->name);
+
+	/* Timer process should not retain random envvars */
+	if (upsnames) {
+		unsetenv("UPSNAME");
+		free(upsnames);
+	}
+
+	if (notifytypes) {
+		unsetenv("NOTIFYTYPE");
+		free(notifytypes);
+	}
+}
+
 static void removetimer(ttype_t *tfind)
 {
 	ttype_t	*tmp, *last;
@@ -135,6 +250,23 @@ static void removetimer(ttype_t *tfind)
 				last->next = tmp->next;
 
 			free(tmp->name);
+
+			if (tmp->upsnames) {
+				char **ps;
+				for (ps = tmp->upsnames; ps != NULL; ps++) {
+					free(*ps);
+				}
+				free(tmp->upsnames);
+			}
+
+			if (tmp->notifytypes) {
+				char **ps;
+				for (ps = tmp->notifytypes; ps != NULL; ps++) {
+					free(*ps);
+				}
+				free(tmp->notifytypes);
+			}
+
 			free(tmp);
 			return;
 		}
@@ -189,7 +321,7 @@ static void checktimers(void)
 			if (nut_debug_level)
 				upslogx(LOG_INFO, "Event: %s ", tmp->name);
 
-			exec_cmd(tmp->name);
+			exec_cmd_timer(tmp);
 
 			/* delete from queue */
 			removetimer(tmp);
@@ -199,7 +331,7 @@ static void checktimers(void)
 	}
 }
 
-static void start_timer(const char *name, const char *ofsstr)
+static void start_timer(const char *name, const char *ofsstr, const char *notifytype, const char *upsname, int shared_timer)
 {
 	time_t	now;
 	long	ofs;
@@ -216,21 +348,105 @@ static void start_timer(const char *name, const char *ofsstr)
 		return;
 	}
 
+	if (shared_timer) {
+		/* See if there is an older entry to attach to,
+		 * otherwise fall through to creating a new one */
+		tmp = last = thead;
+
+		while (tmp) {
+			if (tmp->name && !strcmp(tmp->name, name)) {
+				if (nut_debug_level)
+					upslogx(LOG_INFO, "Append data to shared timer: %s (%ld seconds)", name, ofs);
+
+				/* FIXME? Consider only the first hit as the shared timer?
+				 *  Or check if there is already a copy with same name elsewhere?
+				 */
+				if (notifytype && *notifytype) {
+					if (tmp->notifytypes) {
+						char	**ps = NULL;
+						size_t	count = 0;	/* amount of non-NULL entries, if we get to the end */
+
+						for (ps = tmp->notifytypes; ps != NULL; ps++) {
+							count++;
+							if (!strcmp(*ps, notifytype))
+								break;
+						}
+
+						if (ps == NULL) {
+							tmp->notifytypes = xrealloc(tmp->notifytypes, count + 2);
+							tmp->notifytypes[count] = xstrdup(notifytype);
+							tmp->notifytypes[count + 1] = NULL;
+						}
+					} else {
+						tmp->notifytypes = xcalloc(2, sizeof(char*));
+						tmp->notifytypes[0] = xstrdup(notifytype);
+						tmp->notifytypes[1] = NULL;
+					}
+				}
+
+				if (upsname && *upsname) {
+					if (tmp->upsnames) {
+						char	**ps = NULL;
+						size_t	count = 0;	/* amount of non-NULL entries, if we get to the end */
+
+						for (ps = tmp->upsnames; ps != NULL; ps++) {
+							count++;
+							if (!strcmp(*ps, upsname))
+								break;
+						}
+
+						if (ps == NULL) {
+							tmp->upsnames = xrealloc(tmp->upsnames, count + 2);
+							tmp->upsnames[count] = xstrdup(upsname);
+							tmp->upsnames[count + 1] = NULL;
+						}
+					} else {
+						tmp->upsnames = xcalloc(2, sizeof(char*));
+						tmp->upsnames[0] = xstrdup(upsname);
+						tmp->upsnames[1] = NULL;
+					}
+				}
+
+				return;
+			}
+
+			/* Looping anyway, prepare for fall-through if we get to it */
+			last = tmp;
+			tmp = tmp->next;
+		}
+	}
+
 	if (nut_debug_level)
 		upslogx(LOG_INFO, "New timer: %s (%ld seconds)", name, ofs);
 
 	/* now add to the queue */
-	tmp = last = thead;
+	if (!shared_timer) {
+		tmp = last = thead;
 
-	while (tmp) {
-		last = tmp;
-		tmp = tmp->next;
-	}
+		while (tmp) {
+			last = tmp;
+			tmp = tmp->next;
+		}
+	}	/* else we already know */
 
 	tmp = xmalloc(sizeof(ttype_t));
 	tmp->name = xstrdup(name);
 	tmp->etime = now + ofs;
+	tmp->notifytypes = NULL;
+	tmp->upsnames = NULL;
 	tmp->next = NULL;
+
+	if (notifytype && *notifytype) {
+		tmp->notifytypes = xcalloc(2, sizeof(char*));
+		tmp->notifytypes[0] = xstrdup(notifytype);
+		tmp->notifytypes[1] = NULL;
+	}
+
+	if (upsname && *upsname) {
+		tmp->upsnames = xcalloc(2, sizeof(char*));
+		tmp->upsnames[0] = xstrdup(upsname);
+		tmp->upsnames[1] = NULL;
+	}
 
 	if (last)
 		last->next = tmp;
@@ -238,9 +454,13 @@ static void start_timer(const char *name, const char *ofsstr)
 		thead = tmp;
 }
 
-static void cancel_timer(const char *name, const char *cname)
+static void cancel_timer(const char *name, const char *cname, const char *notifytype, const char *upsname)
 {
 	ttype_t	*tmp;
+
+	/* TOTHINK: Only cancel events associated with a particular UPS and/or type? */
+	NUT_UNUSED_VARIABLE(notifytype);
+	NUT_UNUSED_VARIABLE(upsname);
 
 	for (tmp = thead; tmp != NULL; tmp = tmp->next) {
 		if (!strcmp(tmp->name, name)) {		/* match */
@@ -647,24 +867,37 @@ static int sock_arg(conn_t *conn)
 	if (conn->ctx.numargs < 1)
 		return 0;
 
-	/* CANCEL <name> [<cmd>] */
+	/* CANCEL <name> [<cmd>] [<NOTIFYTYPE> <UPSNAME] */
 	if (!strcmp(conn->ctx.arglist[0], "CANCEL")) {
 		/* "cmd" may be present and empty, this is handled in the method */
 		if (conn->ctx.numargs < 3)
-			cancel_timer(conn->ctx.arglist[1], NULL);
+			cancel_timer(conn->ctx.arglist[1], NULL, NULL, NULL);
 		else
-			cancel_timer(conn->ctx.arglist[1], conn->ctx.arglist[2]);
+		if (conn->ctx.numargs < 5)
+			cancel_timer(conn->ctx.arglist[1], conn->ctx.arglist[2], NULL, NULL);
+		else
+			cancel_timer(conn->ctx.arglist[1], conn->ctx.arglist[2],
+				conn->ctx.arglist[3], conn->ctx.arglist[4]);
 
 		send_to_one(conn, "OK\n");
 		return 1;
 	}
 
-	if (conn->ctx.numargs < 3)
+	if (conn->ctx.numargs < 5)
 		return 0;
 
-	/* START <name> <length> */
+	/* START <name> <length> <NOTIFYTYPE> <UPSNAME> */
 	if (!strcmp(conn->ctx.arglist[0], "START")) {
-		start_timer(conn->ctx.arglist[1], conn->ctx.arglist[2]);
+		start_timer(conn->ctx.arglist[1], conn->ctx.arglist[2],
+			conn->ctx.arglist[3], conn->ctx.arglist[4], 0);
+		send_to_one(conn, "OK\n");
+		return 1;
+	}
+
+	/* START-SHARED <name> <length> */
+	if (!strcmp(conn->ctx.arglist[0], "START-SHARED")) {
+		start_timer(conn->ctx.arglist[1], conn->ctx.arglist[2],
+			conn->ctx.arglist[3], conn->ctx.arglist[4], 1);
 		send_to_one(conn, "OK\n");
 		return 1;
 	}
@@ -1207,9 +1440,17 @@ static void sendcmd(const char *cmd, const char *arg1, const char *arg2)
 	snprintf(buf, sizeof(buf), "%s \"%s\"",
 		cmd, pconf_encode(arg1, enc, sizeof(enc)));
 
-	if (arg2)
-		snprintfcat(buf, sizeof(buf), " \"%s\"",
-			pconf_encode(arg2, enc, sizeof(enc)));
+	snprintfcat(buf, sizeof(buf), " \"%s\"",
+		arg2 ? pconf_encode(arg2, enc, sizeof(enc)) : "");
+
+	/* use envvars set by caller (upsmon) when launching this client process
+	 * (C variables are known not-null courtesy of main() method).
+	 */
+	snprintfcat(buf, sizeof(buf), " \"%s\"",
+		pconf_encode(notify_type, enc, sizeof(enc)));
+
+	snprintfcat(buf, sizeof(buf), " \"%s\"",
+		pconf_encode(ups_name, enc, sizeof(enc)));
 
 	snprintf(enc, sizeof(enc), "%s\n", buf);
 
@@ -1379,6 +1620,12 @@ static void parse_at(const char *ntype, const char *un, const char *cmd,
 	if (!strcmp(cmd, "START-TIMER")) {
 		upsdebugx(1, "%s: processing %s", __func__, cmd);
 		sendcmd("START", ca1, ca2);
+		return;
+	}
+
+	if (!strcmp(cmd, "START-TIMER-SHARED")) {
+		upsdebugx(1, "%s: processing %s", __func__, cmd);
+		sendcmd("START-SHARED", ca1, ca2);
 		return;
 	}
 
